import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group 'me.colingrimes.skymines'
version '1.3.0'

repositories {
    mavenCentral()
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://jitpack.io/' }
}

dependencies {
    implementation 'org.spigotmc:spigot-api:1.21.5-R0.1-SNAPSHOT'
    implementation 'com.github.ColinGrime:Midnight:v1.2.6'
    implementation 'com.github.MilkBowl:VaultAPI:1.7.1'
}

processResources {
    filter ReplaceTokens, beginToken: '${', endToken: '}', tokens: ['version': version]
}